fixed event spacing

--- a/deploy/assets/css/style.css
+++ b/deploy/assets/css/style.css
@@ -1254,12 +1254,13 @@ section {
 --------------------------------------------------------------*/
 .events .member {
   text-align: center;
-  margin-bottom: 110px;
+  margin-bottom: -10px;
   position: relative;
+  height: auto;
 }
 
 .events .member .member-info {
-  position: absolute;
+  position: relative;
   top: 85%;
   left: 0px;
   right: 0px;
@@ -1274,7 +1275,7 @@ section {
 }
 
 .events .member .member-info2 {
-  position: absolute;
+  position: relative;
   top: 85%;
   left: 0px;
   right: 0px;
@@ -1308,8 +1309,19 @@ section {
 
 @media (max-width: 992px) {
   .events .member h3 {
-    font-size: 14px;
+    font-size: 20px;
   }
+}
+
+.events .member h3::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 1px;
+  background: #fff;
+  bottom: 0;
+  left: calc(50% - 25px);
 }
 
 .events .member h4::after {
@@ -1318,7 +1330,7 @@ section {
   display: block;
   width: 50px;
   height: 1px;
-  background: #b1cbd7;
+  background: #092d31;
   bottom: 0;
   left: calc(50% - 25px);
 }
